Load promotion flags on PIREPs before updating them
git-svn-id: file:///home/svn/DVA2006@4645 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a